# pyannotate

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  TODO.md  TODO.txt  appveyor.yml  mypy.ini  pyproject.toml  requirements.txt  run_tests.bat  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
addtypes_runtime/: collect_types.py
addtypes_runtime/tests/: test_collect_types.py
addtypes_tools/: fix_annotate.py  fix_annotate_json.py
addtypes_tools/annotations/: __init__.py  __main__.py  infer.py  main.py  parse.py
addtypes_tools/annotations/tests/: infer_test.py  main_test.py  parse_test.py  types_test.py
addtypes_tools/fixers/tests/: test_annotate.py  test_annotate_json.py
addtypes_tools/fixes/: fix_annotate_json.py
addtypes_tools/fixes/tests/: test_annotate.py  test_annotate_json.py
example/: .gitignore  README.md  conftest.py  driver.py  example_conftest.py  gcd.py  test_gcd.py
fastprof/: fastprof.pyx  setup.py
pyannotate_runtime/: collect_types.py
pyannotate_runtime/tests/: test_collect_types.py
pyannotate_tools/: pytest.py
pyannotate_tools/annotations/: __main__.py  infer.py  main.py  parse.py  types.py
pyannotate_tools/annotations/tests/: dundermain_test.py  infer_test.py  main_test.py  parse_test.py  types_test.py
pyannotate_tools/fixes/: fix_annotate.py  fix_annotate3.py  fix_annotate_command.py  fix_annotate_json.py
pyannotate_tools/fixes/tests/: test_annotate.py  test_annotate3.py  test_annotate_json.py  (+4 more)
scripts/: annotate.sh
tests/: integration_test.py
toto/: toto.py
